[workspace]
members = [
    "cargo-green",
]
resolver = "2"

# [workspace.metadata.green]
# base-image-inline = """
# RUN exit 42
# """

[workspace.package]
authors = [ "Pierre Fenoll <pierrefenoll@gmail.com>" ]
categories = [
    "caching",
    "compilers",
    "concurrency",
    "development-tools::build-utils",
]
edition = "2021"
keywords = [
    "DOCKER_HOST",
    "RUSTC_WRAPPER",
    "build",
    "buildkit",
    "docker",
]
license = "MIT"
repository = "https://github.com/fenollp/supergreen"
version = "0.22.0"

[workspace.dependencies]
anyhow = "1"
astral-tokio-tar = { version = "0, >=0.5", default-features = false }
atomic-write-file = { version = "0, >=0.3", default-features = false }
camino = { version = "1", features = [ "serde1" ] }
cargo-lock = "11"
cargo-subcommand-metadata = "0, >=0.1"
cargo_toml = "0, >=0.21"
chrono = { version = "0, >=0.4", default-features = false, features = [ "now" ] }
indexmap = { version = "2", features = [ "serde" ] }
merkle_hash = { version = "3", default-features = false, features = [ "camino", "parallel" ] }
tokio-stream = { version = "0, >=0.1", default-features = false }
# clap = { version = "4", features = [ "derive" ] }
# clap-cargo = { version = "0, >=0.15", features = [ "cargo_metadata", "clap" ] }
crc32fast = "1"
env_logger = "0, >=0.11"
futures = "0, >=0.3"
home = "0, >=0.5"
log = "0, >=0.4"
nutype = "0, >=0.4"
pico-args = { version = "0, >=0.5", features = [ "eq-separator" ] }
pretty_assertions = "1"
reqwest = { version = "0, >=0.12", default-features = false, features = [ "rustls-tls" ] }
rustc_version = "0, >=0.4"
rustflags = "0, >=0.1"
serde = { version = "1", features = [ "derive" ] }
serde-jsonlines = { version = "0, >=0.6", features = [ "async" ] }
serde_json = "1"
sha256 = "1"
szyk = "1"
termimad = { version = "0, >=0.34", default-features = false }
test-case = "3"
tokio = { version = "1", features = [ "io-util", "macros", "process", "rt-multi-thread", "time" ] }
toml = "0, >=0.8"
version-compare = "0, >=0.2"
which = "8"
