[package]
authors.workspace = true
categories.workspace = true
description = "Cargo plugin and $RUSTC_WRAPPER to sandbox & cache cargo builds and execute jobs remotely"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "cargo-green"
repository.workspace = true
version.workspace = true

#[package.metadata.green]

# [profile.release]
# codegen-units = 1
# Try tuning rustc codegen options to optimize for speed (suggest mold?)
# TODO: use the least amount of codegen units for best LTO
# https://doc.rust-lang.org/nightly/rustc/codegen-options/index.html#codegen-units
# https://doc.rust-lang.org/nightly/rustc/codegen-options/index.html#embed-bitcode
# https://doc.rust-lang.org/nightly/rustc/codegen-options/index.html#instrument-coverage
# https://doc.rust-lang.org/nightly/rustc/codegen-options/index.html#link-arg
# https://doc.rust-lang.org/nightly/rustc/codegen-options/index.html#linker

[dependencies]
anyhow.workspace = true
camino.workspace = true
cargo-lock.workspace = true
cargo-subcommand-metadata.workspace = true
cargo_toml.workspace = true
chrono.workspace = true
# clap.workspace = true
# clap-cargo.workspace = true
crc32fast.workspace = true
env_logger.workspace = true
futures.workspace = true
home.workspace = true
log.workspace = true
nutype.workspace = true
pico-args.workspace = true
pretty_assertions.workspace = true # TODO: drop once !dbg
reqwest.workspace = true
rustc_version.workspace = true
rustflags.workspace = true         # TODO: drop once !dbg
serde.workspace = true
serde-jsonlines.workspace = true
serde_json.workspace = true
sha256.workspace = true
szyk.workspace = true
tokio.workspace = true
toml.workspace = true
url.workspace = true

[dev-dependencies]
assertx.workspace = true
test-case.workspace = true
