[package]
name = "rustcbuildx"
description = "$RUSTC_WRAPPER tool to sandbox cargo builds and execute jobs remotely"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

# [profile.release]
# codegen-units = 1
# Try tuning rustc codegen options to optimize for speed (suggest mold?)
# TODO: use the least amount of codegen units for best LTO
# https://doc.rust-lang.org/nightly/rustc/codegen-options/index.html#codegen-units
# https://doc.rust-lang.org/nightly/rustc/codegen-options/index.html#embed-bitcode
# https://doc.rust-lang.org/nightly/rustc/codegen-options/index.html#instrument-coverage
# https://doc.rust-lang.org/nightly/rustc/codegen-options/index.html#link-arg
# https://doc.rust-lang.org/nightly/rustc/codegen-options/index.html#linker

[dependencies]
anyhow.workspace = true
camino.workspace = true
env_logger.workspace = true
home.workspace = true
log.workspace = true
pretty_assertions.workspace = true # TODO: drop once !dbg
rustflags.workspace = true # TODO: drop once !dbg
supergreen.path = "../supergreen"
tokio.workspace = true
