[package]
name = "supergreen"
description = "Lib of common utils for cargo-green & rustcbuildx"
publish = false
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
camino.workspace = true
tokio.workspace = true
